--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mdi/font": "^6.6.96",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/pwa": "^3.3.5",
     "apexcharts": "^3.35.2",
     "core-js": "^3.19.3",
