--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@nuxtjs/pwa": "^3.3.5",
     "apexcharts": "^3.35.2",
     "core-js": "^3.19.3",
+    "mapbox-gl": "^0.53.1",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-apexcharts": "^1.6.2",
+    "vue-mapbox": "^0.4.1",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.1",
